# Azure-Security-Monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_SUMMARY.md  sample_activity_logs.json  sample_alerts.csv
src/: __init__.py  alerts.py  main.py  parser.py  rules.py
tests/: conftest.py  test_parser.py  test_rules.py
